--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Staatliches&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,32 +7,42 @@
 }
 
 body {
-    height: 100vh;
-    max-height: 100vh;
-    width: 100%;
     background: #1f1f1f;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
+    /* max-height: 100vh; */
+    /* overflow: hidden; */
+    font-family: "Fugaz One";
+    text-transform: uppercase;
+    color: white;
+    font-size: 4rem;
 }
 
 header {
+    overflow-x: hidden;
+}
+
+.h-outline {
     width: 200%;
-    height: 20vh;
+    height: 15vh;
     background: white;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 100%, 50% 57%, 0 57%);
-    transform: skew(45deg) translateX(-25%);
+    transform: translateX(-20%) skew(45deg);
 }
 
 main {
-    width: 100%;
-    height: 50vh;
+    height: 55vh;
+    
 }
 
+
+
 footer {
+    overflow-x: hidden;
+}
+
+.f-outline {
     width: 200%;
     height: 30vh;
     background: white;
     clip-path: polygon(0 0, 50% 0, 50% 43%, 100% 43%, 100% 100%, 0 100%);
-    transform: skew(45deg) translateX(-25%);
+    transform: translateX(-20%) skew(45deg);
 }
